--- a/templates/actor/heading/image.hbs
+++ b/templates/actor/heading/image.hbs
@@ -1,7 +1,7 @@
 <table style="max-width:200px;">
   <tr>
     <td class="profile-image-td" style="padding: 10px; padding-top: 0px">
-      <img src="{{ actor.img }}" data-edit="img" title="{{ actor.name }}" />
+      <img class="profile-pic" src="{{ actor.img }}" data-edit="img" title="{{ actor.name }}" />
     </td>
   </tr>
   <tr>
