--- a/templates/actor/parts/npc-status.hbs
+++ b/templates/actor/parts/npc-status.hbs
@@ -18,14 +18,14 @@
                 </tr>
                 <tr>
                     <td>
-                        <input type="number" name="system.healingRate" value="{{ system.healingRate.value }}" />
+                        <input type="number" name="system.healingRate.value" value="{{ system.healingRate.value }}" />
                     </td>
                     <td>
-                        <input type="number" name="system.combatSequence" value="{{ system.combatSequence.value }}" />
+                        <input type="number" name="system.combatSequence.value" value="{{ system.combatSequence.value }}" />
                     </td>
                     <td>
                         <input type="number"
-                               name="system.npcPassivesense"
+                               name="system.passiveSense.value"
                                value="{{ system.passiveSense.value }}" />
                     </td>
                 </tr>
