--- a/templates/item/item-rangedWeapon-sheet.hbs
+++ b/templates/item/item-rangedWeapon-sheet.hbs
@@ -94,7 +94,7 @@
         </tr>
         <tr>
           <td>Ammo</td>
-          <td>Ammo Default</td>
+          <td>Ammo Assigned</td>
           <td>Capacity</td>
           <td>Load</td>
         </tr>
