--- a/templates/actor/parts/actor-drdv.hbs
+++ b/templates/actor/parts/actor-drdv.hbs
@@ -1,6 +1,7 @@
+<br />
 <div class="flex">
-  <div class="mr-2">
-    <h4>Resistances:</h4>
+  <div class="mr-2" style="border-right:1px solid;">
+    <h4>Resist</h4>
     <ol class="trait-list">
       {{#each this.dr as |dr|}}
       <li>
@@ -13,7 +14,7 @@
     </ol>
   </div>
   <div>
-    <h4>Vulnerabilities:</h4>
+    <h4>Weak</h4>
     <ol class="trait-list">
       {{#each this.dv as |dv|}}
       <li>
