--- a/templates/actor/dialog/skill.hbs
+++ b/templates/actor/dialog/skill.hbs
@@ -1,24 +1,28 @@
 <form autocomplete="off">
   <div class="form-group">
-    <fieldset>
-      <legend>Bonuses / Penalties</legend>
-      <div class="flex space-between">
-        <div>Skill Bonus:</div>
-        <div>{{ skillBonus }}</div>
-      </div>
-      <div class="flex space-between">
-        <div>Ability:</div>
-        <div>{{ selectedAbilityBonus }}</div>
-      </div>
-      <div class="flex space-between">
-        <div>Luck:</div>
-        <div>{{ actorLuck }}</div>
-      </div>
-      <div class="flex space-between">
-        <div>Penalties:</div>
-        <div>{{ actorPenalties }}</div>
-      </div>
-    </fieldset>
+      <fieldset>
+          <legend>Bonuses / Penalties</legend>
+          <div class="flex space-between">
+              <div>Skill Bonus:</div>
+              <div>{{ skillBonus }}</div>
+          </div>
+          <div class="flex space-between">
+              <div>Ability:</div>
+              <div>{{ selectedAbilityBonus }}</div>
+          </div>
+          <div class="flex space-between">
+              <div>Luck:</div>
+              <div>{{ actorLuck }}</div>
+          </div>
+          <div class="flex space-between">
+              <div>Penalties:</div>
+              <div>{{ actorPenalties }}</div>
+          </div><hr />
+          <div class="flex space-between">
+              <div>Total:</div>
+              <div>{{#Skills skillBonus selectedAbilityBonus actorLuck actorPenalties}}{{/Skills}}</div>
+          </div>
+      </fieldset>
   </div>
   <div class="form-group">
     <fieldset>
