--- a/templates/actor/items/equipped-armor.hbs
+++ b/templates/actor/items/equipped-armor.hbs
@@ -50,7 +50,7 @@
     title="{{localize 'DOCUMENT.Update' type='item'}}">
     {{item.name}}
 </td>
-<td>DP:{{item.system.defensePoint.value}}</td>
+<td title="Armor HP = Armor DP x CND">HP:{{item.system.armorHP.value}}</td>
 </tr>
 {{/if}}
 {{/each}}
