--- a/templates/item/item-trait-sheet.hbs
+++ b/templates/item/item-trait-sheet.hbs
@@ -9,9 +9,12 @@
   <header class="sheet-header">
     <img class="profile-img" src="{{ item.img }}" data-edit="img" title="{{ item.name }}" />
     <div class="header-fields">
-      <h1 class="charname">
-        <input name="name" type="text" value="{{ item.name }}" placeholder="Name" />
-      </h1>
+        <h1 class="charname">
+            <input name="name" type="text" value="{{ item.name }}" placeholder="Name" />
+        </h1><br />
+        <input type="text"
+               name="system.requirement.value"
+               value="{{ system.requirement.value }}" />
     </div>
   </header>
 
