quick and dirty app to award xp and caps

--- a/css/falloutzero.css
+++ b/css/falloutzero.css
@@ -8,6 +8,7 @@
 @import 'targeted-attack.css';
 @import 'chat.css';
 @import 'sheet-status.css';
+@import 'award.css';
 
 /* Global styles */
 @font-face {
