--- a/css/base.css
+++ b/css/base.css
@@ -71,6 +71,14 @@
   margin: 0 10px;
 }
 
+.my-1 {
+  margin: 5px 0px;
+}
+
+.my-2 {
+  margin: 10px 0;
+}
+
 button > i {
   margin: 0;
 }
@@ -92,4 +100,8 @@ button > i:hover {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+.nowrap {
+  white-space: nowrap;
 }
