--- a/css/grid.css
+++ b/css/grid.css
@@ -3,6 +3,15 @@
   display: grid;
   grid-column: span 2 / span 2;
   grid-template-columns: repeat(2, minmax(0, 1fr));
+  align-items: center;
+}
+
+.grid.justify-center {
+  justify-content: center;
+}
+
+.grid.space-between {
+  justify-content: space-between;
 }
 
 .grid.bordered {
