--- a/templates/perk/perk.hbs
+++ b/templates/perk/perk.hbs
@@ -1,4 +1,4 @@
-<form class="{{ cssClass }}" autocomplete="off">
+<form class="perk" autocomplete="off">
   <header class="sheet-header">
     <div class="header-fields">
       <h1>
@@ -30,15 +30,23 @@
             {{selectOptions specialOptions selected=system.specialReq.special valueAttr="id" labelAttr="label" blank="None"}}
           </select>
           {{#if system.specialReq.special }}
-          <input type="number" value="system.specialReq.value" min="1" max="10" name="system.specialReq.value" placeholder="Required special value" />
+          <input type="number" value={{system.specialReq.value}} min="1" max="10" name="system.specialReq.value" placeholder="Required special value" />
           {{/if}}
         </div>
 
-        {{!-- Character race requirement --}}
-        <div class="nowrap">Race requirement: </div>
-        <select name="system.raceReq">
-          {{selectOptions raceOptions selected=system.raceReq valueAttr="id" labelAttr="label" blank="None"}}
-        </select>
+
+        {{!-- Race requirements --}}
+        <div class="nowrap">Race requirements: </div>
+        <div data-race-drop class="drop-area" data-tooltip="drop race here to add">
+          {{#each system.raceReq as |race|}}
+              <div class="flex">
+                <div>{{race.label}}</div>
+                <button data-remove-race="{{race.id}}" class="ml-5" type="button">
+                  <i class="fas fa-minus-square"></i>
+                </button>
+              </div>
+          {{/each}}
+        </div>
       </div>
     </div>
   </header>
