--- a/css/falloutzero.css
+++ b/css/falloutzero.css
@@ -11,6 +11,7 @@
 @import 'award.css';
 @import 'perk.css';
 @import 'drag-drop.css';
+@import 'perk-list.css';
 
 /* Global styles */
 @font-face {
