level up wizard

--- a/css/falloutzero.css
+++ b/css/falloutzero.css
@@ -12,6 +12,7 @@
 @import 'perk.css';
 @import 'drag-drop.css';
 @import 'perk-list.css';
+@import 'level-up.css';
 
 /* Global styles */
 @font-face {
